compilateurDeca/src/test/deca/context/invalid/sans_objet/declaration/variable-void.deca

// Description:
//    Sans-Objet
//    Affectation 
//    condition type != void :
//
// Resultats:
//    Ligne 15: 
//     Le type d'une variable ne peut pas être void
//
// Historique:
//    cree le 06/01/2026

{
    void a;
}